<resources>
    <string name="app_name">BioMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajouter_au_panier">AJOUTER AU PANIER</string>
    <string name="shampooing_solide_2_en_1_huile_de_coco_bio_60g">Shampooing Solide 2 en 1 - Huile de Coco Bio - 60g</string>
    <string name="_4_95">4.95Є</string>
    <string name="product_description">
        Product Description Product Product Description Product Description Description Product Description Description Product Description Product Product Description Product Description Product Description Product Description Product Description Product Description Product Description</string>
    <string name="_99_99">99,99Є</string>
    <string name="product_title">Product Title</string>
    <string name="_999_99">999,99Є</string>
    <string name="mad">MAD</string>
    <string name="title_of_this_product_title_of_this_product">title of this product title of this product</string>
    <string name="_150_00">150.00</string>
    <string name="each">Each</string>
    <string name="_300_00">300.00</string>
    <string name="subtotal">Subtotal</string>
    <string name="_1">1</string>
    <string name="you_have_not_purchased_anything_yet">You have not purchased anything yet</string>
    <string name="deliverer_informations">Deliverer Informations</string>
    <string name="phone_number">Phone number</string>
    <string name="fullname">Fullname</string>
    <string name="delivery_state">Delivery state</string>
    <string name="yet_to_be_confirmed">Yet to be confirmed</string>
    <string name="id_of_command">ID of command</string>
    <string name="in_process">in process</string>
    <string name="confirmed">confirmed</string>
    <string name="todo">TODO</string>
    <string name="_999">999</string>
    <string name="_99">99</string>
    <string name="availble">Availble</string>
    <string name="my_commands">My commands</string>
    <string name="commandid">CommandID</string>
    <string name="commandid_1234567">CommandID 1234567</string>
    <string name="important_informations_ndelivery_location_and_phone_number">Important Informations\nDelivery location And phone number</string>
    <string name="add_product">Add Product</string>
    <string name="customize_product">Customize Product</string>
    <string name="order_delivery">Order Delivery</string>
    <string name="add_delivery">Add delivery</string>
    <string name="in_store">In Store</string>
    <string name="visibility">Visibility</string>
    <string name="title_activity_order_delivery">OrderDeliveryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Search</string>
    <string name="min_price">min price</string>
    <string name="_search">search</string>
    <string name="max_price">max price</string>
    <string name="related_to_this_product">Related to this product</string>
    <string name="view_all">View All</string>
    <string name="submit">Submit</string>
    <string name="profile_informations">Profile Informations</string>
</resources>