<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewLink"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="13dp"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dateOfCommand"
            android:layout_width="210dp"
            android:layout_height="23dp"
            android:minWidth="50dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/commandid_1234567"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirmed"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/confirmed_bg"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/confirmed"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/line_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/dateOfCommand"
            app:layout_constraintTop_toTopOf="parent" />


        <!--        </LinearLayout>-->


        <TextView
            android:id="@+id/process"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/process_bg"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/in_process"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/line_in_progress_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/dateOfCommand"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/line_right_70"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>