<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDetailsActivity">


    <ScrollView
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/buttom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <!--    Product Details    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="13dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="390dp"
                        android:layout_height="259dp"
                        android:src="@drawable/test_product" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins_extrabold"
                        android:gravity="center_horizontal"
                        android:padding="7dp"
                        android:text="@string/product_title"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <!--                price old-->

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/addProductToCartShop"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2"
                        android:fontFamily="@font/poppins_bold"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="10dp"
                        android:text="@string/ajouter_au_panier"
                        android:textAlignment="center"
                        android:background="@drawable/botton_bg"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:focusable="true" />
                    <!--                android:background="@drawable/border"-->


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_weight="8"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/priceLeft"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/_999"
                                android:textColor="@color/textHeading"
                                android:textSize="19sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:weightSum="3">

                                <TextView
                                    android:id="@+id/priceRight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/_99"
                                    android:textColor="@color/textHeading"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mad"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:textColor="@color/textHeading"
                                android:textSize="19sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </RelativeLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="7dp"
                    android:text="@string/product_description"
                    android:textSize="17sp" />


            </LinearLayout>


            <!--    Product for this Title    -->
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/otherProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/textHeading"
                        android:text="@string/related_to_this_product"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <TextView
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/textHeading2"
                        android:text="@string/view_all"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleViewProductContext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/home_product_template"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>