<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="Search Fragment"-->
    <!--        android:textSize="26dp"-->
    <!--        android:layout_gravity="center"/>-->



    <!--<ScrollView-->
    <!--    android:id="@+id/scrollView"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:visibility="gone">
            <ImageView
                android:id="@+id/imageViewFilter"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:src="@drawable/line_filter_800"
                android:layout_gravity="center_vertical"
                android:alpha="0.5"
                android:layout_marginStart="10dp"/>

            <TextView
                android:visibility="visible"
                android:id="@+id/textViewMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="filtrer les resultat"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llSearchSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/line_search_24"
                    android:drawablePadding="20sp"
                    android:padding="9dp"
                    android:background="@drawable/border_white_empty"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/_search"
                    android:inputType="textEmailAddress"
                    android:shadowRadius="@integer/material_motion_duration_long_1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/linearLayoutForFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputMinPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/line_search_24"
                            android:drawablePadding="20sp"
                            android:fontFamily="@font/poppins_medium"
                            android:padding="9dp"
                            android:background="@drawable/border_white_empty"
                            android:hint="@string/min_price"
                            android:inputType="number"
                            android:shadowRadius="@integer/material_motion_duration_long_1"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputMaxPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/line_search_24"
                            android:padding="9dp"
                            android:background="@drawable/border_white_empty"
                            android:drawablePadding="20sp"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/max_price"
                            android:inputType="number"
                            android:shadowRadius="@integer/material_motion_duration_long_1"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/textViewAlert"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="@color/red"
                    android:text=""/>




                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="13dp">

                    <TextView
                        android:id="@+id/textViewSearch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_semibold"
                        android:background="@drawable/botton_bg"
                        android:clickable="true"
                        android:textColor="@color/white"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="7dp"
                        android:text="@string/search"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:focusable="true" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="2"
                tools:listitem="@layout/product_template" />

        </LinearLayout>




    </LinearLayout>



    <!--</ScrollView>-->







</FrameLayout>

